<resources>
    <string name="app_name">CSC306B-CW</string>
    <string name="name">Name</string>
    <string name="reply">Reply</string>
    <string name="askName">Howdy stranger! I am Baldur, What is your name?</string>
    <string name="reply1">"That's a wonderful name, %1$s\nHow about I show you around?</string>
    <string name="sure">Sure</string>
    <string name="nav_bar_logs">Logs</string>
    <string name="nav_bar_goals">Goals</string>
    <string name="nav_bar_stopwatch">Stop Watch</string>
    <string name="nav_bar_settings">Settings</string>
    <string name="activity">Activity</string>
    <string name="time">Time</string>
    <string name="detail_activity_category">Title:</string>
    <string name="detail_time">Time:</string>
    <string name="description">Description:</string>
    <string name="ask_cat_name">Activity title:</string>
    <string name="cat_title_hint">(Required)</string>
    <string name="activity_desc">Type your activity description here(Optional)</string>
    <string name="cancel_submit">Cancel</string>
    <string name="submit">Add Log</string>
    <string name="start_time">Start:</string>
    <string name="end_time">End:</string>
    <string name="progress">Progress:</string>
    <string name="hours">Hour(s)</string>
    <string name="deadline">Deadline:</string>
    <string name="daily_goal">Daily goal:</string>
    <string name="daily_goal_hours">Hour(s)</string>
    <string name="font_size">Font Size:</string>
    <string name="small_font">Small</string>
    <string name="mid_font">Medium</string>
    <string name="Large_font">Large</string>
    <string name="theme">Theme:</string>
    <string name="light_dark">Light / Dark </string>
    <string name="goal_title">Goal title:</string>
    <string name="goal_description">What\'s your goal?</string>
    <string name="submit_goal">Add Goal</string>
    <string name="duration">Duration:</string>
    <string name="sortTimeASC">Starting Time - ASC</string>
    <string name="sortTimeDESC">Starting Time - DESC</string>
    <string name="sortDurationASC">Duration - ASC</string>
    <string name="sortDurationDESC">Duration - DESC</string>
    <string name="cardDuration">Duration</string>
    <string name="interval">New log every</string>
    <string name="intervalLogDuration">Each log for </string>
    <string name="goal_minute">Minute(s)</string>
    <string name="filterDate">Any Date</string>
    <string name="filterTitleHint">Filter Title:</string>
    <string name="optional">(Optional)</string>
    <string name="filterDuration">Filter\nDuration:</string>
    <string name="cardDate">Date</string>
    <string name="editBtn">Edit Log</string>
    <string name="deleteBtn">Delete Log</string>
    <string name="overview">Overview</string>
    <string name="logTag">Logs</string>
    <string name="submitEditedLog">Edit Log</string>
    <string name="totalHoursLogged">Total Hours Logged:</string>
    <string name="deleteGoal">Delete Goal</string>
    <string name="Search">Search</string>
    <string name="allDate">All Date</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="to"> To </string>
    <string name="timer">0:00:00</string>
    <string name="startTimer">Start</string>
    <string name="pauseTimer">Pause</string>
    <string name="resumetimer">Resume</string>
    <string name="resetTimer">Reset</string>
    <string name="image_upload_button">Upload Image</string>
    <string name="removeImg">Remove Image</string>
    <string name="filterLog">Filter Logs</string>


    <!--Dummy Data-->
    <string name="date1">Apr 15</string>
    <string name="date2">Apr 16</string>
    <string name="date3">Apr 17</string>
    <string name="date4">Apr 18</string>
    <string name="date5">Apr 19</string>
    <string name="starting_time">7 pm</string>
    <string name="ending_time">8 pm</string>
    <string name="duration_hour">1 hour</string>
    <string name="duration_minute">0 minutes</string>
    <string name="reading">Reading</string>
    <string name="workout">Workout</string>
    <string name="church">Church</string>
    <string name="tmpTime">7 pm - 8 pm</string>
    <string name="tmpDesc">Read the first two chapter of Percy Jackson first book</string>
    <string name="progress_dummy">Progress</string>
    <string name="deadline_date">Deadline Date</string>
    <string name="daily_goal_time">1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>