<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="3dp"
            android:text="@string/ask_cat_name"
            android:textAlignment="center">

        </TextView>

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/cat_title_hint"
            android:inputType="text"
            android:textAlignment="center" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <Button
                android:id="@+id/reading_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:backgroundTint="@color/light_gray"
                android:drawableLeft="@drawable/baseline_book_24"
                android:elevation="8dp"
                android:stateListAnimator="@null"
                android:text="@string/reading"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/workout_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:backgroundTint="@color/light_gray"
                android:drawableLeft="@drawable/baseline_directions_bike_24"
                android:elevation="8dp"
                android:stateListAnimator="@null"
                android:text="@string/workout"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/church_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:backgroundTint="@color/light_gray"
                android:drawableLeft="@drawable/baseline_church_24"
                android:elevation="8dp"
                android:stateListAnimator="@null"
                android:text="@string/church"
                android:textColor="@color/black" />

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/start_time" />

        <Button
            android:id="@+id/start_time_picker"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:elevation="8dp"
            android:layout_margin="3dp"
            android:stateListAnimator="@null"
            android:text="@string/starting_time"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/end_time" />

        <Button
            android:id="@+id/end_time_picker"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:elevation="8dp"
            android:layout_margin="3dp"
            android:stateListAnimator="@null"
            android:text="@string/ending_time"
            android:textAlignment="center" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/custom_button"
        android:hint="@string/activity_desc"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:elevation="8dp"
            android:stateListAnimator="@null"
            android:text="@string/image_upload_button" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/percy"
            tools:ignore="InefficientWeight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:elevation="8dp"
            android:stateListAnimator="@null"
            android:layout_gravity="center"
            android:text="@string/cancel_submit" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="5dp"
            android:elevation="8dp"
            android:stateListAnimator="@null"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/submit" />
    </LinearLayout>


</LinearLayout>