<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:minHeight="100dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/catBar"
            android:layout_width="450dp"
            android:layout_height="18dp"
            android:translationX="-15dp"
            android:translationY="-8dp"
            android:backgroundTint="@color/purple"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/goalTitle"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/reading"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_marginStart="15dp"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/progress_line"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/progress"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/actual_progress"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/progress_dummy" />

                    <TextView
                        android:id="@+id/progress_hour"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hours"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/daily_goal_text"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/daily_goal" />

                    <TextView
                        android:id="@+id/daily_goal"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/daily_goal_time" />

                    <TextView
                        android:id="@+id/daily_goal_hours"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hours"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/deadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/deadline" />

                    <TextView
                        android:id="@+id/deadline_date"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/deadline_date"
                        android:textAlignment="textStart" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>