<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="5dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/catColor"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/black"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="12dp">

            <TextView
                android:id="@+id/activity"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:text="@string/activity"
                android:textAlignment="center"
                android:gravity="bottom"
                tools:ignore="RtlCompat"
                android:textSize="19.5sp" />

            <TextView
                android:id="@+id/activityDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cardDate"
                android:textAlignment="center"
                android:gravity="bottom"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAlignment="textStart"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cardDuration"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:gravity="center"
                tools:ignore="RtlCompat" />
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>